--- a/design.css
+++ b/design.css
@@ -2,11 +2,58 @@
     --text-color-1: rgba(24, 33, 109, 1);
     --text-color-2: rgba(201, 205, 209, 1);
     --button-color: rgba(0, 236, 208, 1);
-background-color: white;
+    background-color: white;
 
-font-family: 'DM Sans', sans-serif;
+    font-size: 62.5%;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 500;
 }
 
-.text{
-
+.texth1{
+    text-align: center;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2.8rem;
+    line-height: 2.7rem;
+    color: var(--text-color-1);
 }
+.p1{
+    text-align: center;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2.0rem;
+    color: var(--text-color-1);
+}
+.texth2{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+    color: var(--text-color-1);
+}
+
+.texth3{
+    font-style: normal;
+font-weight: 600;
+font-size: 2.0rem;
+line-height: 2.4rem;
+color: var(--text-color-1);
+}
+
+.pricetext{
+    font-style: normal;
+font-weight: 400;
+font-size: 1.4rem;
+line-height: 2.4rem;
+color: var(--text-color-2);
+}
+
+.button {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.7rem;
+}
+
+.headerImage {}
